# sundial

./: Cargo.toml  README.md  install.yml  org.freedesktop.timedate1.xml
.github/workflows/: test.yml
src/: main.rs  util.rs
sundialctl/: Cargo.toml
sundialctl/src/: cli.rs  dbus.rs  main.rs
sundiald/: Cargo.toml
sundiald/src/: dbus.rs  main.rs  util.rs
