[package]
name = "sundiald"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "2.5.3"
tokio = { version = "1.25.0", features = ["full"] }
zbus = { version = "3.10.0", default-features = false, features = ["tokio"] }
