[workspace]
members = [
    "sundiald",
    "sundialctl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["classabbyamp <dev@placeviolette.net>"]
license = "BSD-2-Clause"

[workspace.dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
zbus = { version = "3.10.0", default-features = false, features = ["tokio"] }
