[package]
name = "sundialctl"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.31", default-features = false, features = ["std"] }
clap = { workspace = true }
parse_datetime = "0.5.0"
tokio = { workspace = true }
zbus = { workspace = true }
