[package]
name = "sundiald"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
caps = "0.5.5"
clap = { workspace = true }
enumflags2 = "0.7.5"
event-listener = "3.0.0"
libc = "0.2.139"
nix = { version = "0.27.1", features = ["time", "ioctl", "fs"], default-features = false }
tokio = { workspace = true }
zbus = { workspace = true }
zbus_polkit = { version = "3.0.0", default-features = false, features = ["tokio"] }
