[package]
name = "sundiald"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
caps = "0.5.5"
chrono = { workspace = true }
clap = { workspace = true }
enumflags2 = "0.7.5"
env_logger = "0.10.0"
event-listener = "3.0.0"
libc = "0.2.139"
log = "0.4.20"
nix = { version = "0.27.1", features = ["time", "ioctl", "fs"], default-features = false }
tokio = { workspace = true }
zbus = { workspace = true }
zbus_polkit = { version = "3.0.0", default-features = false, features = ["tokio"] }
